kubernetes/apps/calibre-web/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: calibre-web
  labels:
    toolkit.fluxcd.io/tenant: dev-team
